[gd_scene load_steps=7 format=2]

[ext_resource path="res://font/Montserrat-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Src/Outgame/Calcul_chrono.gd" type="Script" id=2]
[ext_resource path="res://Assets/Textures/GUI/target_colored_outline.png" type="Texture" id=3]
[ext_resource path="res://Assets/Textures/GUI/bowArrow.png" type="Texture" id=4]
[ext_resource path="res://Assets/Textures/Levels/tuto/colored_desert.png" type="Texture" id=5]

[sub_resource type="DynamicFont" id=1]
size = 70
outline_size = 4
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[node name="Node2D" type="Node2D"]
script = ExtResource( 2 )

[node name="questions" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="question1" type="TextureButton" parent="questions"]
margin_left = 240.0
margin_top = 170.0
margin_right = 640.0
margin_bottom = 270.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="question1" type="Label" parent="questions/question1"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = 7.62939e-06
custom_fonts/font = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="bowArrow" type="Sprite" parent="questions/question1"]
position = Vector2( -100, 50.545 )
scale = Vector2( 0.8, 0.8 )
texture = ExtResource( 4 )

[node name="question2" type="TextureButton" parent="questions"]
margin_left = 240.0
margin_top = 320.0
margin_right = 640.0
margin_bottom = 420.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="question2" type="Label" parent="questions/question2"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = 7.62939e-06
custom_fonts/font = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="bowArrow2" type="Sprite" parent="questions/question2"]
position = Vector2( -100, 52.1339 )
scale = Vector2( 0.8, 0.8 )
texture = ExtResource( 4 )

[node name="question3" type="TextureButton" parent="questions"]
margin_left = 240.0
margin_top = 470.0
margin_right = 640.0
margin_bottom = 570.0

[node name="question3" type="Label" parent="questions/question3"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = 7.62939e-06
custom_fonts/font = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="bowArrow3" type="Sprite" parent="questions/question3"]
position = Vector2( -100, 51.8741 )
scale = Vector2( 0.8, 0.8 )
texture = ExtResource( 4 )

[node name="question4" type="TextureButton" parent="questions"]
margin_left = 240.0
margin_top = 620.0
margin_right = 640.0
margin_bottom = 720.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="question4" type="Label" parent="questions/question4"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = 7.62939e-06
custom_fonts/font = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="bowArrow4" type="Sprite" parent="questions/question4"]
position = Vector2( -100, 52.311 )
scale = Vector2( 0.8, 0.8 )
texture = ExtResource( 4 )

[node name="answers" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="answer1" type="TextureButton" parent="answers"]
margin_left = 860.0
margin_top = 170.0
margin_right = 1260.0
margin_bottom = 270.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="answer1" type="Label" parent="answers/answer1"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 3.05176e-05
custom_fonts/font = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="duck_target_yellow" type="Sprite" parent="answers/answer1"]
position = Vector2( -100, 40.0947 )
scale = Vector2( 0.6, 0.6 )
texture = ExtResource( 3 )

[node name="answer2" type="TextureButton" parent="answers"]
margin_left = 860.0
margin_top = 320.0
margin_right = 1260.0
margin_bottom = 420.0

[node name="answer2" type="Label" parent="answers/answer2"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 3.05176e-05
custom_fonts/font = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="duck_target_yellow2" type="Sprite" parent="answers/answer2"]
position = Vector2( -100, 40.2232 )
scale = Vector2( 0.6, 0.6 )
texture = ExtResource( 3 )

[node name="answer3" type="TextureButton" parent="answers"]
margin_left = 860.0
margin_top = 470.0
margin_right = 1260.0
margin_bottom = 570.0

[node name="answer3" type="Label" parent="answers/answer3"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 3.05176e-05
custom_fonts/font = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="duck_target_yellow3" type="Sprite" parent="answers/answer3"]
position = Vector2( -100, 40.3925 )
scale = Vector2( 0.6, 0.6 )
texture = ExtResource( 3 )

[node name="answer4" type="TextureButton" parent="answers"]
margin_left = 860.0
margin_top = 620.0
margin_right = 1260.0
margin_bottom = 720.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="answer4" type="Label" parent="answers/answer4"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 3.05176e-05
custom_fonts/font = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="duck_target_yellow4" type="Sprite" parent="answers/answer4"]
position = Vector2( -100, 42.0895 )
scale = Vector2( 0.6, 0.6 )
texture = ExtResource( 3 )

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]

[node name="Sprite" type="Sprite" parent="ParallaxBackground/ParallaxLayer"]
position = Vector2( -213.222, -64.2815 )
texture = ExtResource( 5 )
centered = false
region_enabled = true
region_rect = Rect2( 0, 0, 2048, 1024 )
[connection signal="pressed" from="questions/question1" to="." method="_on_question1_pressed"]
[connection signal="pressed" from="questions/question2" to="." method="_on_question2_pressed"]
[connection signal="pressed" from="questions/question3" to="." method="_on_question3_pressed"]
[connection signal="pressed" from="questions/question4" to="." method="_on_question4_pressed"]
[connection signal="pressed" from="answers/answer1" to="." method="_on_answer1_pressed"]
[connection signal="pressed" from="answers/answer2" to="." method="_on_answer2_pressed"]
[connection signal="pressed" from="answers/answer3" to="." method="_on_answer3_pressed"]
[connection signal="pressed" from="answers/answer4" to="." method="_on_answer4_pressed"]
